# r-clite-gui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  test_gui.sh
.claude/skills/Flutter Conventions & Best Practices/: SKILL.md
.claude/skills/Performance Optimization/: SKILL.md
.claude/skills/Requirements Engineering/: SKILL.md
.claude/skills/flutter-adaptive-ui/: SKILL.md
.claude/skills/flutter-animations/: SKILL.md
.claude/skills/flutter-architecture/: SKILL.md
.claude/skills/flutter-internationalization/: SKILL.md
.claude/skills/flutter-navigation/: SKILL.md
.claude/skills/flutter-networking/: SKILL.md
.claude/skills/flutter-testing/: SKILL.md
.claude/skills/interaction-design/: SKILL.md
.claude/skills/mobile-android-design/: SKILL.md
.claude/skills/mobile-ios-design/: SKILL.md
.claude/skills/mssql-table-explorer/: SKILL.md
.claude/skills/rust-python-migration/: SKILL.md
.claude/skills/vibe-sec-fastapi/: SKILL.md
.claude/skills/vibe-sec-flutter/: SKILL.md
.github/workflows/: rust.yml
docs/: gui-extension-spec.md  gui-manual-smoke-checklist.md  r-clite-gui-spec.md  roadmap.md
docs/superpowers/plans/: 2026-03-27-gui-tests.md  2026-03-30-milestone1-fluid-text-movement.md
docs/superpowers/specs/: 2026-03-27-gui-tests-design.md  (+1 more)
src/: buffer.rs  config.rs  editor.rs  file_picker.rs  highlight.rs  keymap.rs  lib.rs  main.rs  terminal.rs  ui.rs
src/collab/: client.rs  mod.rs  server.rs
src/core/: editor_core.rs  mod.rs
src/gui/: mod.rs
tests/: buffer_tests.rs  core_tests.rs  gui_tests.rs
(+64 files in other folders)
