[package]
name = "r-clite"
version = "0.1.0"
edition = "2024"
description = "A minimal CLI text editor written in Rust"
license = "MIT"

[[bin]]
name = "rcte"
path = "src/main.rs"

[features]
default = []
collab = ["dep:tokio", "dep:serde", "dep:serde_json"]

[dependencies]
crossterm = "0.28"
ropey = "1.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Milestone 4 — LAN collaboration (feature-gated)
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
